--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "antd": "^5.11.1",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
